style/style.css
html{
    box-sizing: border-box;
}
*,
*::after,
*::before{
    box-sizing:border-box;
    margin: 0;
    padding: 0;
}

/* global */

.flex{
    display: flex;
    align-items: center;
    gap: 5px;
}

input , button{
    border: none;
    outline: none;
}

/* header */

header{
    display: flex;
    flex-direction: column;
    position: sticky;
    top: 0;
    box-shadow: 0px 1px rgb(246 239 239);
}

.background-header-bottom{
    background-color: white;
}

.background-header{
    background-color: white;
    padding: 20px;
    /* position: sticky;
    top: 0; */
}

.header-top{
    justify-content: space-between;
    align-items: center;
}

.shop-logo{
    width: 25px;
    height: 30px;
    margin-right: 15px;
}

.login-header{
    margin-left: 10px;
    position: relative;
}

.submit-header{
    width: 141px;
    height: 40px;
    border-radius: 8px;
    cursor: pointer;
    padding-left: 26px;
    text-align: end;
    border: solid 1px gainsboro;
    background: white;
}

.submit-logo{
    width: 25px;
    height: 30px;
    position: absolute;
    top: 6px;
    right: 15px;
}

.search-header{
    margin-right: 20px;
    width: 600px;
    height: 40px;
    border-radius: 8px;
    background-color: #dcdcdc54;
    font-size: large;
    padding-right: 57px;
}

.search-header::placeholder{
    color: gray;
}

.span-header-left{
    background-color: gainsboro;
    width: 1px;
    height: 25px;
}

.header-top-left{
    align-items: center;
    position: relative;
}

.header-top-right{
    align-items: center;
    position: relative;
}

.search-box-header{
    position: relative;
}

.search-logo-header{
    position: absolute;
    height: 20px;
    width: 20px;
    top: 10px;
    right: 38px;
    color: gray;
}

.header-bottom{
    padding: 0px 20px;
    display: flex;
    justify-content: space-between;
    margin-bottom: 10px;
}

.header-bottom-right{
    display: flex;
    gap: 20px;
}

.span-bottom-header{
    width: 1px;
    height: 20px;
    background-color: gainsboro;
}

.ct-header-bottom{
    color: #535252;
}

.svg-size{
    width: 20px;
    height: 20px;
}

.t-decoration{
    text-decoration: none;
}

/* main */
.storieswraper{
    margin-top: 30px;
    gap: 25px;
    margin-right: 20px;
}

.story-pic-background{
    border: solid 2px purple;
    border-radius: 100%;
    margin-bottom: 5px;
}

.story{
    align-items: center;
    justify-content: center;
    flex-direction: column;
}

.sp{
    /* position: absolute; */
    border-radius: 100%;
    width: 80px;
    margin: 3px;
    margin-top: 3px;
    margin-left: 3px;
    margin-right: 3px;
    margin-bottom: 0.1px;
}

.link-story{
    text-decoration: none;
    color: black;
}

